--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_config)
 export(get_data)
 export(get_dictionary)
 export(get_node_url)
+export(login_to_osf)
 export(move)
 export(move_to_projects)
 export(move_waterbutler)
